fix overlappingCard css broken on firefox fix static image for eyes test

--- a/src/components/OverlappingCard/OverlappingCard.st.css
+++ b/src/components/OverlappingCard/OverlappingCard.st.css
@@ -20,19 +20,20 @@
 
 .root {
     -st-extends: Card;
-    -st-states: flippedRatio, invertInfoPosition;
-    grid-template-rows: 10% auto 10%;
-    grid-template-areas: "media margin-top" "media info" "media margin-bottom";
+    -st-states: invertInfoPosition;
     border: none;
-}
-
-.root:invertInfoPosition {
-    grid-template-areas: "margin-top media" "info media" "margin-bottom media";
+    position: relative;
+    padding: 2.4% 0;
 }
 
 .root > .mediaContainer {
     background-color: value(mediaBGColor);
     margin-right: value(negativeInfoPadding);
+    position: relative;
+    height: 120%;
+    top: -10%;
+    right: 0;
+    left: 0;
 }
 
 .root:invertInfoPosition > .mediaContainer {
